# SamAndStuDoPhysics

./: CMakeLists.txt  README.md  planets.h
flowSim/include/: basicParticle.h  flowContainer.h  fluidParticle.h  velocityField.h
flowSim/src/: basicParticle.cpp  flowContainer.cpp  fluidParticle.cpp  velocityField.cpp
include/: astroObjectBase.h  basicParticle.h  flowContainer.h  fluidParticle.h  main.h  planet.h  planets.h  solarSystem.h  tests.h
src/: astroObjectBase.cpp  basicParticle.cpp  flowContainer.cpp  fluidParticle.cpp  main.cpp  planet.cpp  planets.cpp  solarSystem.cpp  tests.cpp  velocityField.cpp
